--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "html-validator": "5.1.17",
     "husky": "7.0.0",
     "jest": "24.9.0",
-    "lint-staged": "11.1.2"
+    "lint-staged": "11.1.2",
+    "parcel": "^2.0.1"
   },
   "eslintIgnore": [
     "**/test/**/*",
