--- a/src/ex18_more/package.json
+++ b/src/ex18_more/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ex17_js_components",
+  "name": "ex18_more",
   "version": "1.0.0",
   "description": "kanban board components",
   "source": "src/index.html",
